[tool.poetry]
name = "injectinput"
version = "0.1.3"
description = "Inject input"
authors = ["Dick Marinus <dick@mrns.nl>"]
license = "GPL-3"

[tool.poetry.dependencies]
python = ">= 3.8"
evdev = "^1.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pylint = "^2.17.5"
black = ">=23.9.1,<25.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
injectinput = 'injectinput.injectinput:main'
