[tool.poetry]
name = "injectinput"
version = "0.2.1"
description = "Inject input"
authors = ["Dick Marinus <dick@mrns.nl>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = ">= 3.8"
evdev = ">= 1.6.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pylint = "^3.2.5"
black = "^24.4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
injectinput = 'injectinput.injectinput:main'
